Bug 1522817 - Expose possibly-gray global object before passing it into the JS API in Document::AdoptNode r=bzbarsky a=pascalc

Currently Document::AdoptNode gets the JS global object, but in a way that does not expose it first, so it's possible for this to pass a gray object in here.  From the comments it seems like this doesn't matter, but it does break our invariant that no gray objects are passed into the API.

Differential Revision: https://phabricator.services.mozilla.com/D29210